--- a/src/app/components/organisms/footer/footer.css
+++ b/src/app/components/organisms/footer/footer.css
@@ -33,10 +33,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 0.5rem;
+  gap: 1rem;
   list-style: none;
   padding-left: 1rem;
-  margin: 0;
 }
 
 .footer-social {
